--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-MONGO = mongodb+srv://jaivishwakarma0712:Jai@0710@cluster0.hzjuczn.mongodb.net/test?retryWrites=true&w=majority
+MONGO = mongodb+srv://jaivishwakarma0712:Jai%400710@cluster0.hzjuczn.mongodb.net/test?retryWrites=true&w=majority
+
+GOOGLE_CLIENT_ID = 332820271360-v89k80jfik33mntubkdtstrfmnj99pb1.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+
+
+NEXTAUTH_SECRET = "kbwevjwvjwnpnobcbqecolqc"
