--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MONGO = mongodb+srv://jaivishwakarma0712:Jai%400710@cluster0.hzjuczn.mongodb.net
 GOOGLE_CLIENT_ID = 332820271360-v89k80jfik33mntubkdtstrfmnj99pb1.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 
-
-NEXTAUTH_SECRET = "kbwevjwvjwnpnobcbqecolqc"
+NEXTAUTH_SECRET = "kbwevjwvjwnpnobcbqlqc"
+NEXTAUTH_URL_INTERNAL= "http://localhost:3000"
